save all changes

--- a/client/index.html
+++ b/client/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="MAKE YOUR OWN STYLE... Discover unique fashion and express yourself with our curated collection of clothing and accessories." />
     <meta name="keywords" content="fashion, style, clothing, accessories, online shopping, fashion store" />
     <meta name="author" content="Your Fashion Store" />
-    <meta property="og:title" content="Singh Style Studio" />
+    <meta property="og:title" content="Ankit Vastraa" />
     <meta property="og:description" content="Discover unique fashion and express yourself with our curated collection of clothing and accessories.MAKE YOUR OWN STYLE... | Your Fashion Store" />
     <meta property="og:type" content="website" />
     <meta name="robots" content="index, follow" />
-    <title>Singh Style Studio</title>
+    <title>Ankit Vastraa</title>
   </head>
   <body>
     <div id="root"></div>
